Added a cell to download grid

--- a/interfaces/interactive_spectrum.ipynb
+++ b/interfaces/interactive_spectrum.ipynb
@@ -3,6 +3,35 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2019-08-12 22:28:56--  https://zenodo.org/record/2557923/files/phoenix_t4000_10000_w3000_9000_r3000.h5?download=1\n",
+      "Resolving zenodo.org (zenodo.org)... 188.184.65.20\n",
+      "Connecting to zenodo.org (zenodo.org)|188.184.65.20|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 74932480 (71M) [application/octet-stream]\n",
+      "Saving to: ‘test_grid.h5’\n",
+      "\n",
+      "test_grid.h5        100%[===================>]  71.46M   407KB/s    in 2m 21s  \n",
+      "\n",
+      "2019-08-12 22:31:19 (521 KB/s) - ‘test_grid.h5’ saved [74932480/74932480]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://zenodo.org/record/2557923/files/phoenix_t4000_10000_w3000_9000_r3000.h5?download=1 -O test_grid.h5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +57,7 @@
        "<SpectralGrid(teff=4000.0, logg=3.0, mh=0.0)>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,13 +67,13 @@
     "from bqplot import pyplot as plt\n",
     "from ipywidgets import interactive, IntSlider, FloatSlider\n",
     "\n",
-    "grid = load_grid('mygrid.h5')\n",
+    "grid = load_grid('test_grid.h5')\n",
     "grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
